# zdb

./: .clang-tidy  .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  Tasks.md  clang-tidy-usage.md  run-clang-tidy.sh  run-cppcheck.sh  setup-vcpkg.sh  test-html-generation.sh  vcpkg.json
.github/workflows/: cmake-single-platform.yml
6.5840/: ATTRIBUTION
6.5840/src/: go.mod  go.sum
6.5840/src/kvraft1/: server.go
6.5840/src/kvraft1/rsm/: rsm.go  rsm_test.go  server.go  test.go
6.5840/src/raft1/: raft.go  server.go  test.go
6.5840/src/shardkv1/shardgrp/: server.go
6.5840/src/tester1/: group.go  srv.go
docs/: DESIGN.md  Tasks.md
git-hooks/: pre-commit  pre-push
proto/: error.proto  kvStore.proto  raft.proto  types.proto
src/: CMakeLists.txt  CircuitBreaker.cpp  CircuitBreaker.hpp  Error.cpp  Error.hpp  ErrorConverter.cpp  ErrorConverter.hpp  ExponentialBackoff.cpp  ExponentialBackoff.hpp  FullJitter.cpp  InMemoryKVStore.cpp  InMemoryKVStore.hpp  KVRPCService.hpp  KVServer.cpp  KVServer.hpp  KVStoreClient.cpp  KVStoreClient.hpp  KVStoreServer.cpp  KVStoreServer.hpp  PeerNode.cpp  PeerNode.hpp  Repeater.hpp  RetryPolicy.cpp  RetryPolicy.hpp  Simple.cpp  Simple.hpp  example.cppm  go.mod  main.cpp  unit_tests.cpp
src/client/: Config.cpp  Config.hpp  KVRPCService.cpp  KVRPCService.hpp  KVStoreClient.cpp  KVStoreClient.hpp
src/common/: CircuitBreaker.cpp  CircuitBreaker.hpp  Command.cpp  Command.hpp  Error.cpp  Error.hpp  ErrorConverter.cpp  ErrorConverter.hpp  ExponentialBackoff.cpp  ExponentialBackoff.hpp  FullJitter.cpp  FullJitter.hpp  KVStateMachine.cpp  KVStateMachine.hpp  LockedUnorderedMap.hpp  RPCService.hpp  Repeater.cpp  Repeater.hpp  RetryPolicy.cpp  RetryPolicy.hpp  Types.cpp  Types.hpp  Util.cpp  Util.hpp
src/goRaft/: CMakeLists.txt  cgo_callbacks.go  cgo_raft.go  cgo_rsm.go  go.mod  go.mod.in  go.sum  raft_factory.go
src/goRaft/cgo/: Commands.hpp  GoChannel.cpp  GoChannel.hpp  GoPersister.cpp  GoPersister.hpp  GoRPCClient.cpp  GoRPCClient.hpp  GoStateMachine.cpp  RaftHandle.hpp  bridge_stubs.cpp  labrpc_client.cpp  labrpc_client.hpp  raft_wrapper.cpp  raft_wrapper.h  raft_wrapper.hpp  rsm_wrapper.cpp
src/include/client/: Config.hpp  KVStoreClient.hpp
src/include/common/: CircuitBreaker.hpp  Command.hpp  Error.hpp  ErrorConverter.hpp  ExponentialBackoff.hpp  KVStateMachine.hpp  RPCService.hpp  Repeater.hpp  Types.hpp  TypesMap.hpp
src/include/goRaft/cgo/: GoChannel.hpp  GoPersister.hpp  GoRPCClient.hpp  GoStateMachine.hpp  RaftHandle.hpp  RsmHandle.hpp  raft_wrapper.hpp  rsm_wrapper.hpp
src/include/lock/: Lock.hpp
src/include/raft/: AsyncTimer.hpp  Channel.hpp  Command.hpp  Log.hpp  PendingRequests.hpp  Raft.hpp  RaftImpl.hpp  RaftServiceImpl.hpp  Rsm.hpp  StateMachine.hpp  SyncChannel.hpp  Types.hpp
src/include/server/: KVStoreServiceImpl.hpp  RPCServer.hpp
src/include/storage/: FilePersister.hpp  InMemoryKVStore.hpp  Persister.hpp
src/interface/: StorageEngine.hpp
src/lock/: Lock.cpp  Lock.hpp
src/proto/: KVStore.proto  kvStore.proto  peer.proto
src/raft/: AsyncTimer.cpp  AsyncTimer.hpp  Channel.cpp  Channel.hpp  Command.hpp  Log.cpp  Log.hpp  PendingRequests.cpp  Raft.hpp  RaftImpl.cpp  RaftImpl.hpp  RaftServiceImpl.cpp  RaftServiceImpl.hpp  Rsm.cpp  StateMachine.hpp  SyncChannel.cpp  SyncChannel.hpp  Types.cpp  Types.hpp
src/server/: InMemoryKVStore.cpp  InMemoryKVStore.hpp  KVStoreServer.cpp  KVStoreServer.hpp  KVStoreServiceImpl.cpp  KVStoreServiceImpl.hpp  RPCServer.hpp
src/storage/: FilePersister.cpp  FilePersister.hpp  InMemoryKVStore.cpp  InMemoryKVStore.hpp  Persister.hpp
src/tst/: CircuitBreakerTest.cpp  ErrorConverterTest.cpp  ExponentialBackoffTest.cpp  FullJitterTest.cpp  InMemoryKVStoreTest.cpp  KVRPCServiceTest.cpp  KVStoreClientTest.cpp  KVStoreServerTest.cpp  RepeaterTest.cpp  RetryPolicyTest.cpp
src/zdb/: PeerNode.cpp  PeerNode.hpp  main.cpp
triplets/: x64-linux-debug.cmake
tst/: CMakeLists.txt  CircuitBreakerTest.cpp  ConfigTest.cpp  ErrorConverterTest.cpp  ExponentialBackoffTest.cpp  FullJitterTest.cpp  InMemoryKVStoreTest.cpp  KVRPCServiceTest.cpp  KVStoreClientTest.cpp  KVStoreServerTest.cpp  RepeaterTest.cpp  RetryPolicyTest.cpp  main.cpp
tst/KVTestFramework/: KVTestFramework.cpp  KVTestFramework.hpp  KVTestFrameworkTest.cpp  NetworkConfig.cpp  NetworkConfig.hpp  Porcupine.cpp  Porcupine.hpp  ProxyKVStoreService.cpp  ProxyKVStoreService.hpp  ProxyService.hpp
tst/KVTestFramework/porcupine/: go.mod  main.go
tst/RaftTestFramework/: ProxyRaftService.cpp  ProxyRaftService.hpp  RaftTestFramework.cpp  RaftTestFramework.hpp
tst/client/: ConfigTest.cpp  KVRPCServiceTest.cpp  KVStoreClientTest.cpp
tst/common/: CircuitBreakerTest.cpp  ErrorConverterTest.cpp  ExponentialBackoffTest.cpp  FullJitterTest.cpp  RepeaterTest.cpp  RetryPolicyTest.cpp
tst/kvTest1/: ErrorTestDebug.cpp  KVTest.cpp  KVTestFramework.cpp  KVTestFramework.hpp  KVTestFrameworkTest.cpp  LockTest.cpp  NetworkConfig.cpp  NetworkConfig.hpp  Porcupine.cpp  Porcupine.hpp  ProxyKVStoreService.hpp  SingleClientDebug.cpp  TestFrameworkValidation.cpp  TestKVServer.cpp  go.mod  porcupine_checker
tst/kvTest1/porcupine/: main.go  porcupine_checker.go
tst/raft/: RaftTest.cpp  RaftTestFramework.hpp  TestRaft.hpp
tst/raftTest/: RaftTest.cpp
tst/server/: InMemoryKVStoreTest.cpp  KVStoreServerTest.cpp
tst/units/: Raft.cpp
